[package]
name = "kanban"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.5.0"              # Data-oriented Rust UI design toolkit.
